--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
       Me and my iPod in Seattle!  You can see rain clouds and the 
       Space Needle.  You can't see the 628 coffee shops.
     </p>
+    <p>
+     <img src="photos/seattle_video_med.jpg" alt="image of seattle">
+     <img src="photos/seattle_classic.jpg" alt="image of classic Ipod">
+     <img src="photos/seattle_downtown.jpg" alt="image of a white ipod">
+     <img src="photos/seattle_shuffle.jpg" alt="image of an Ipod suffle">
+    </p>
+
+<h2>Birmingham, England</h2>
+<p>
+  Here are some iPod photos around Birmingham. We've obviously got some
+  passionate folks over here who love their iPods. Check out the classic
+  red British telephone box!
+</p>
+<p>
+  <img src="photos/britain.jpg" alt="An iPod in Birmingham at a telephone box">
+<img src="photos/applestore.jpg" alt="An iPod in Birmingham at a telephone box">
+</p>
   </body>
 </html>
 
