--- a/index.html
+++ b/index.html
@@ -33,22 +33,26 @@
       Space Needle.  You can't see the 628 coffee shops.
     </p>
     <p>
-     <img src="photos/seattle_video_med.jpg" alt="image of seattle">
-     <img src="photos/seattle_classic.jpg" alt="image of classic Ipod">
-     <img src="photos/seattle_downtown.jpg" alt="image of a white ipod">
-     <img src="photos/seattle_shuffle.jpg" alt="image of an Ipod suffle">
-    </p>
+     <a href="photos/seattle_video_med.jpg"><img src="thumbnails/seattle_video_med.jpg" alt="image of seattle" width="150" height="100" title="Overlooking the harbour" loading="lazy"></a>
 
-<h2>Birmingham, England</h2>
-<p>
-  Here are some iPod photos around Birmingham. We've obviously got some
-  passionate folks over here who love their iPods. Check out the classic
-  red British telephone box!
-</p>
-<p>
-  <img src="photos/britain.jpg" alt="An iPod in Birmingham at a telephone box">
-<img src="photos/applestore.jpg" alt="An iPod in Birmingham at a telephone box">
-</p>
-  </body>
-</html>
+     <a href="photos/seattle_classic.jpg"><img src="thumbnails/seattle_classic.jpg" alt="image of classic Ipod" width="150" height="100" title="Overlooking the habour" loading="lazy"></a>
+
+     <a href="photos/seattle_downtown.jpg"> <img src="thumbnails/seattle_downtown.jpg" alt="image of a white ipod" width="150" height="100" title="Beautiful downtown seattle" loading="lazy"></a>
+
+     <a href="photos/seattle_shuffle.jpg"><img src="thumbnails/seattle_shuffle.jpg" alt="image of an Ipod suffle" width="150" height="100" title="My Ipod Shuffle" loading="lazy"></a> 
+    </p>
+    
+    <h2>Birmingham, England</h2>
+    <p>
+      Here are some iPod photos around Birmingham. We've obviously got some
+      passionate folks over here who love their iPods. Check out the classic
+      red British telephone box!
+    </p>
+    <p>
+      <a href="photos/britain.jpg"><img src="thumbnails/britain.jpg" alt="An iPod in Birmingham at a telephone box" width="150" height="225" title="Vintage red telephone box" loading="lazy"></a>
+
+      <a href="photos/applestore.jpg"><img src="thumbnails/applestore.jpg" alt="An iPod in Birmingham at a telephone box" width="150" height="225" title="Applestore Building" loading="lazy"></a>
+    </p>
+      </body>
+    </html>
 
