--- a/html/seattle_vide_med.html
+++ b/html/seattle_vide_med.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <p>
-        <img src="../photos/seattle_classic.jpg" alt="image of classic ipod" width="600" height="400" title="Overlooking the harbour" loading="lazy">
+        <img src="../photos/seattle_video_med.jpg" alt="image of seattle" width="600" height="400" title="Overlooking the harbour" loading="lazy">
     </p>
     <p>
         <a href="../index.html">Return to main page</a>
