--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Space Needle.  You can't see the 628 coffee shops.
     </p>
     <p>
-     <a href="photos/seattle_video_med.jpg"><img src="thumbnails/seattle_video_med.jpg" alt="image of seattle" width="150" height="100" title="Overlooking the harbour" loading="lazy"></a>
+     <a href="html/seattle_vide_med.html"><img src="thumbnails/seattle_video_med.jpg" alt="image of seattle" width="150" height="100" title="Overlooking the harbour" loading="lazy"></a>
 
      <a href="photos/seattle_classic.jpg"><img src="thumbnails/seattle_classic.jpg" alt="image of classic Ipod" width="150" height="100" title="Overlooking the habour" loading="lazy"></a>
 
