--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>
      <a href="html/seattle_vide_med.html"><img src="thumbnails/seattle_video_med.jpg" alt="image of seattle" width="150" height="100" title="Overlooking the harbour" loading="lazy"></a>
 
-     <a href="photos/seattle_classic.jpg"><img src="thumbnails/seattle_classic.jpg" alt="image of classic Ipod" width="150" height="100" title="Overlooking the habour" loading="lazy"></a>
+     <a href="html/seattle_classic.html"><img src="thumbnails/seattle_classic.jpg" alt="image of classic Ipod" width="150" height="100" title="Overlooking the habour" loading="lazy"></a>
 
      <a href="photos/seattle_downtown.jpg"> <img src="thumbnails/seattle_downtown.jpg" alt="image of a white ipod" width="150" height="100" title="Beautiful downtown seattle" loading="lazy"></a>
 
