--- a/html/seattle_classic.html
+++ b/html/seattle_classic.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>seattle_video_med</title>
+    <title>Seattle Peir</title>
     <style>
       body {
         background-color: black;
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <h1>Classic ipod on a peir in Seattle</h1>
     <p>
         <img src="../photos/seattle_classic.jpg" alt="image of classic ipod" width="600" height="400" title="Overlooking the harbour" loading="lazy">
     </p>
