--- a/html/seattle_vide_med.html
+++ b/html/seattle_vide_med.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>seattle_video_med</title>
+    <title>seattle habour</title>
     <style>
       body {
         background-color: black;
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <h1>Ipod slim overlooking the Seattle habour</h1>
     <p>
         <img src="../photos/seattle_video_med.jpg" alt="image of seattle" width="600" height="400" title="Overlooking the harbour" loading="lazy">
     </p>
