--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     </style>
   </head>
   <body>
+    
+    <p><img src="logo/mypod.png" alt="mypod logo"></p>
 
     <h1>Welcome to myPod</h1>
+    
     <p>
       Welcome to the place to show off your iPod, wherever you might be.
       Wanna join the fun? All you need is any iPod, from the early classic 
